unpackaged/main/default/objects/GBLite__GBTestSettings__c/GBLite__GBTestSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GBTestSettings</label>
</CustomObject>