unpackaged/main/default/objects/GBLite__GBTestSettings__c/fields/GBLite__Callout_Timeout_milliseconds__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Callout_Timeout_milliseconds__c</fullName>
    <label>Callout Timeout (milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>