unpackaged/main/default/objects/GBLite__GBTestSettings__c/fields/GBLite__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>