unpackaged/main/default/objects/GBLite__GBTestSettings__c/fields/GBLite__MP_Token__c.field-meta.xml
<CustomField>
    <fullName>GBLite__MP_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MP Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>