unpackaged/main/default/objects/GBLite__GBTestSettings__c/fields/GBLite__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Namespace_Prefix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Namespace Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>